[project]
name = "agno-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.9",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.7.3",
    "ddgs>=9.5.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-genai>=1.29.0",
    "lxml-html-clean>=0.4.2",
    "markdown>=3.8.2",
    "newspaper4k>=0.9.3.1",
    "ollama>=0.5.3",
    "openai>=1.99.6",
    "packaging>=25.0",
    "scrapegraph-py>=1.18.2",
    "streamlit>=1.48.0",
    "uvicorn[standard]>=0.35.0",
    "yfinance>=0.2.65",
    "youtube-transcript-api>=1.2.2",
]
